WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94514
[BlackBerry] Enabling DEBUG_LAYER_ANIMATION results in build break & warnings
https://bugs.webkit.org/show_bug.cgi?id=94514
Summary
[BlackBerry] Enabling DEBUG_LAYER_ANIMATION results in build break & warnings
Andrew Lo
Reported
2012-08-20 12:39:46 PDT
DEBUG_LAYER_ANIMATION is for debug prints that are disabled by default. Enabling it results in an undefined wtf::CString build break & warnings.
Attachments
Patch
(3.28 KB, patch)
2012-08-20 12:49 PDT
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Lo
Comment 1
2012-08-20 12:49:17 PDT
Created
attachment 159493
[details]
Patch
Rob Buis
Comment 2
2012-08-20 12:52:39 PDT
Comment on
attachment 159493
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-08-20 14:15:51 PDT
Comment on
attachment 159493
[details]
Patch Clearing flags on attachment: 159493 Committed
r126068
: <
http://trac.webkit.org/changeset/126068
>
WebKit Review Bot
Comment 4
2012-08-20 14:15:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug